bonus/k8s/app/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-default-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.k8s.icchon.jp
    secretName: app-tls-secret
  rules:
  - host: app.k8s.icchon.jp
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: app3-service
            port:
              number: 80
